<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FB SHARE BX</string>
    <string name="app_tagline">Boost your share count effortlessly</string>
    <string name="hint_cookie">Facebook Cookie</string>
    <string name="hint_link">Post Link</string>
    <string name="hint_limit">Share Limit (e.g. 1000)</string>
    <string name="btn_start">Start Sharing</string>
    <string name="nav_open">Open menu</string>
    <string name="nav_close">Close menu</string>
    <string name="menu_home">Home</string>
    <string name="menu_features">Features</string>
    <string name="menu_developer">Developer</string>
    <string name="menu_theme">Dark Mode</string>
    <string name="menu_update">Check for Updates</string>
    <string name="menu_about">About</string>
    <string name="title_features">Features</string>
    <string name="title_developer">Developer</string>
    <string name="title_about">About</string>
</resources>
